Fix macOS non-component debug build

This broke in 0b26f20ae136 [formerly 223326c134a0].

Bug: 763398, 768630
Change-Id: Ie5e7eb7a7d3ea01a30b8a262db22931c2ed7d4d9
Reviewed-on: https://chromium-review.googlesource.com/684616
Reviewed-by: Matt Menke <mmenke@chromium.org>
Commit-Queue: Mark Mentovai <mark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#504416}
Former-commit-id: e96c3116e28f97b03c4448120c8cb43a878ed173